[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Erik Seguinte <ErikSeguinte@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.58.0"}
databases = {extras = ["sqlite"], version = "^0.3.2"}
gunicorn = "^20.0.4"
passlib = {extras = ["argon2"], version = "^1.7.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
